src/objects/IMS_TPA_Purpose__c.object
<CustomObject>
    <description>List all pruposes for which 3rd party agreements can be drawn.</description>
    <fields>
        <fullName>BU__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PMA</fullName>
                </value>
                <value>
                    <fullName>PPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulting_Area__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Consulting Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial Implementation Services</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Customer Insight</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Government Services</fullName>
                </value>
                <value>
                    <fullName>HEOR</fullName>
                </value>
                <value>
                    <fullName>Managed Care</fullName>
                </value>
                <value>
                    <fullName>Marketing Optimization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Portfolio Strategy</fullName>
                </value>
                <value>
                    <fullName>Pricing and Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Primary Market Research</fullName>
                </value>
                <value>
                    <fullName>Sales Performance Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dollar_Value__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Estimated Mean Dollar Value(per project)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>English_Translation__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>English Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>French_Translation__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-2884</description>
        <label>French Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To deactivate the uses which are no more required. Created By TPA Module Under TPA-FEATURE-5.</description>
        <label>Is_Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japanese_Translation__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5.</description>
        <label>Japanese Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_IMS_TPA_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>New IMS TPA Purpose</label>
        <referenceTo>IMS_TPA_Purpose__c</referenceTo>
        <relationshipLabel>IMS TPA Purpose</relationshipLabel>
        <relationshipName>IMS_TPA_Purpose</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_TPA_Purpose_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>New TPA Purpose Category</label>
        <referenceTo>TPA_Purpose_Category__c</referenceTo>
        <relationshipLabel>IMS TPA Purpose</relationshipLabel>
        <relationshipName>IMS_TPA_Purpose</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_for_Sorting_Display__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Other for Sorting Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Purpose_Name__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Primary Purpose Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purpose_Details__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Purpose Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purpose_Owner__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Purpose Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Manual_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Requires Manual Review</label>
        <type>Checkbox</type>
    </fields>
    <label>IMS TPA Purpose</label>
    <nameField>
        <label>Purpose</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMS TPA Purpose</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>